# insanely-fast-whisper-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.json  config.fast.json  config.mac.json  pyproject.toml  smithery.yaml
src/whisper_mcp/: __init__.py  server.py
