[project]
name = "insanely-fast-whisper-mcp"
version = "0.1.0"
description = "Blazingly fast audio transcription MCP server using Whisper with Flash Attention 2"
authors = [
    {name = "Sami Halawa"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.2",
    "fastmcp>=0.5.0",
    "insanely-fast-whisper>=0.0.15",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_mcp"]

[tool.smithery]
server = "whisper_mcp.server:create_server"

[tool.uv]
dev-dependencies = [
    "mcp-cli>=0.2.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
